--- a/data/stories.yml
+++ b/data/stories.yml
@@ -22,7 +22,7 @@ stories:
   steps:
     - checkpoint: check_ask_help
     - intent: request_doc_register
-    - action: action_faq_comprovate
+    - action: action_get_doc_register
     - checkpoint: check_more_help
 
 - story: solicitar contato de professores
@@ -38,14 +38,14 @@ stories:
     - slot_was_set:
         - requested_slot: null
     - active_loop: null
-    - action: action_buscar_professor
+    - action: action_get_professor_contact
     - checkpoint: check_more_help
 
 - story: solicitar iformações horarios das aulas
   steps:
     - checkpoint: check_ask_help
     - intent: request_classes
-    - action: action_buscar_classes
+    - action: action_get_classes
     - checkpoint: check_more_help
 
 - story: solicitar calendário acadêmico
@@ -59,7 +59,7 @@ stories:
   steps:
     - checkpoint: check_ask_help
     - intent: request_courses
-    - action: action_buscar_courses
+    - action: action_get_courses
     - checkpoint: check_more_help
 
 - story: solicitar documentos para matricula
@@ -80,7 +80,7 @@ stories:
   steps:
     - checkpoint: check_ask_help
     - intent: request_internship
-    - action: action_buscar_internship
+    - action: action_get_internship_info
     - checkpoint: check_more_help
   
 - story: precisa de mais alguma ajuda? sim
