update: implementing courses feature

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -200,3 +200,48 @@ nlu:
     - me diz o que tu faz
     - tu faz o que?
     - faz o que?
+- intent: modality
+  examples: |
+    - [integrado](courses_modality)
+    - [Integrado](courses_modality)
+    - [subsequente](courses_modality)
+    - [Subsequente](courses_modality)
+    - [superior](courses_modality)
+    - [Superior](courses_modality)
+- intent: courses
+  examples: |
+    - [automação](course_name)
+    - [automacao](course_name)
+    - [automação industrial](course_name)
+    - [fabricacao](course_name)
+    - [fabricação mecânica](course_name)
+    - [fabricação](course_name)
+    - [informática](course_name)
+    - [informatica para internet](course_name)
+    - [internet](course_name)
+    - [info](course_name)
+    - [geoprocessamento](course_name)
+    - [geo](course_name)
+    - [eletrotecnica](course_name)
+    - [eletrotécnica](course_name)
+    - [eletro](course_name)
+    - [refrigeração](course_name)
+    - [refrigeracao](course_name)
+    - [refri](course_name)
+    - [enfermagem](course_name)
+    - [técnico enfermagem](course_name)
+    - [tec enfermagem](course_name)
+    - [eng mecânica](course_name)
+    - [engenharia mec](course_name)
+    - [engenharia mecânica](course_name)
+    - [tads](course_name)
+    - [analise e desenvolvimento de software](course_name)
+    - [análise e desenvolvimento de software](course_name)
+    - [tce](course_name)
+    - [construção de edifícios](course_name)
+    - [construcão de edificios](course_name)
+    - [formacao pedagogica](course_name)
+    - [formação pedagógica](course_name)
+    - [formacao pedagogica nao licenciados](course_name)
+    - [formação pedagógica não licenciados](course_name)
+    - [formacao pedagógica nao licenciados](course_name)
