--- a/data/stories.yml
+++ b/data/stories.yml
@@ -55,12 +55,22 @@ stories:
     - action: action_get_calendar
     - checkpoint: check_more_help
 
-- story: solicitar cursos
+- story: solicitar informações sobre os cursos
   steps:
     - checkpoint: check_ask_help
     - intent: request_courses
+    - action: courses_form
+    - active_loop: courses_form
+    - slot_was_set:
+      - requested_slot: courses_modality
+    - slot_was_set:
+      - courses_modality: Técnicos integrados
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_get_courses
-    - checkpoint: check_more_help
+    - intent: courses
+    - action: action_get_info_course
 
 - story: solicitar documentos para matricula
   steps:
@@ -74,13 +84,6 @@ stories:
     - checkpoint: check_ask_help
     - intent: request_redo_register
     - action: action_inform_redo_register
-    - checkpoint: check_more_help
-
-- story: solicitar iformações sobre estagios
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_internship
-    - action: action_get_internship_info
     - checkpoint: check_more_help
   
 - story: precisa de mais alguma ajuda? sim
