remove: mongo endpoint and pods

--- a/endpoints.yml
+++ b/endpoints.yml
@@ -18,12 +18,12 @@
 action_endpoint:
   url: "http://actions:5055/webhook"
 
-tracker_store:
-  type: mongod
-  url: mongodb://mongo:27017
-  db: rasa
-  username: root
-  password: example
+# tracker_store:
+#   type: mongod
+#   url: mongodb://mongo:27017
+#   db: rasa
+#   username: root
+#   password: example
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
 # https://rasa.com/docs/rasa/tracker-stores
