--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -5,3 +5,6 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.3
 sqlparse==0.4.2
 tzdata==2022.1
+djangorestframework==3.13.1
+django-filter==22.1
+markdown==3.4.1
