add: feature requirements

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -177,15 +177,6 @@ nlu:
     - quais cursos
     - EAD
     - cursos
-- intent: request_internship
-  examples: |
-    - estagio
-    - estágio
-    - hora de estagio
-    - fazer estagio
-    - como fazer estágio
-    - estagios
-    - estágios
 - intent: ask_what_bot_do
   examples: |
     - o que você faz?
@@ -215,3 +206,25 @@ nlu:
     - [tce](courses_name)
     - [formação pedagógica](courses_name)
     - [pedagógica não licenciados](courses_name)
+- intent: request_requirements
+  examples: |
+    - quero os requerimentos
+    - me diz quais formulários tem
+    - quero os formularios
+    - requerimentos
+    - formulários
+    - cancelar matricula
+    - justificar falta
+    - trancar disciplinas
+- intent: req_students
+  examples: |
+    - [Aproveitamento de Estudos](requirements)
+    - [Atividades Complementares](requirements)
+    - [Cancelamento de Matrícula](requirements)
+    - [Certificação de Conhecimentos](requirements)
+    - [Justificativa de Falta](requirements)
+    - [Solicitação de Segunda Chamada](requirements)
+    - [Quebra de Pré-Requisito](requirements)
+    - [Reingresso](requirements)
+    - [Trancamento de Disciplina](requirements)
+    - [Trancamento de Matrícula](requirements)
