--- a/endpoints.yml
+++ b/endpoints.yml
@@ -11,12 +11,12 @@
 # https://rasa.com/docs/rasa/custom-actions
 
 # rodando localhost
-# action_endpoint:
-#   url: "http://localhost:5055/webhook"
+action_endpoint:
+  url: "http://localhost:5055/webhook"
 
 # rodando no okteto
-action_endpoint:
-  url: "http://actions:5055/webhook"
+# action_endpoint:
+#   url: "http://actions:5055/webhook"
 
 # tracker_store:
 #   type: mongod
