--- a/config.yml
+++ b/config.yml
@@ -19,7 +19,17 @@ pipeline:
     "token_pattern": None
   - name: SpacyFeaturizer
   - name: RegexFeaturizer
+  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer 
+    analyzer: char_wb 
+    min_ngram: 1 
+    max_ngram: 4
   - name: LexicalSyntacticFeaturizer
+  - name: ResponseSelector
+    epochs: 100
+    constrain_similarities: true
+  - name: "SpacyEntityExtractor"
+    dimensions: ["PERSON"]
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: True
@@ -27,11 +37,6 @@ pipeline:
   - name: FallbackClassifier
     threshold: 0.3
     ambiguity_threshold: 0.1
-
-#   - name: WhitespaceTokenizer
-  # - name: ResponseSelector
-  #   epochs: 100
-  #   constrain_similarities: true
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
@@ -48,13 +53,3 @@ policies:
 #     max_history: 5
 #     epochs: 100
 #     constrain_similarities: true
-  # - name: MemoizationPolicy
-  #   max_history: 1
-  # - name: RulePolicy
-  # - name: UnexpecTEDIntentPolicy
-  #   max_history: 5
-  #   epochs: 100
-  # - name: TEDPolicy
-  #   max_history: 5
-  #   epochs: 100
-  #   constrain_similarities: true
