Criação e implementação do chitchat

--- a/data/rules.yml
+++ b/data/rules.yml
@@ -15,3 +15,8 @@ rules:
     steps:
       - intent: ask_what_bot_do
       - action: action_what_bot_do
+
+  - rule: Ask the user to rephrase whenever they send a message with low NLU confidence
+    steps:
+    - intent: nlu_fallback
+    - action: utter_please_rephrase
