--- a/domain.yml
+++ b/domain.yml
@@ -182,6 +182,8 @@ responses:
     - text: Estes são os documentos que você precisa manter atualizados no IFRS = CPF, Comprovante de residência e dados cadastrais!
   utter_req_to_ask:
     - text: Pode dizer ou então me pergunte o que posso fazer!
+  utter_please_rephrase:
+    - text: Me desculpe, mas não posso ajudar sobre isso?
 
   # utter buttons
   utter_ask_more_help:
