--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ pipeline:
     constrain_similarities: True
   - name: EntitySynonymMapper
   - name: FallbackClassifier
-    threshold: 0.3
+    threshold: 0.7
     ambiguity_threshold: 0.1
 
 #   - name: WhitespaceTokenizer
@@ -41,6 +41,17 @@ policies:
 # # See https://rasa.com/docs/rasa/policies for more information.
 #   - name: MemoizationPolicy
 #   - name: RulePolicy
+#   - name: UnexpecTEDIntentPolicy
+#     max_history: 5
+#     epochs: 100
+#   - name: TEDPolicy
+#     max_history: 5
+#     epochs: 100
+#     constrain_similarities: true
+    # - name: RulePolicy
+    #   core_fallback_threshold: 0.4
+    #   core_fallback_action_name: "action_default_fallback"
+    #   enable_fallback_prediction: True
 #   - name: UnexpecTEDIntentPolicy
 #     max_history: 5
 #     epochs: 100
