--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -26,12 +26,183 @@ stories:
     intent: request_doc_register
   - action: action_faq_comprovate
   - action: utter_ask_help
-
-- story: comprovante story
-  steps:
   - checkpoint: check_ask_help
-  - user: |
-      preciso do meu atestado de matricula
-    intent: request_doc_register
-  - action: action_faq_comprovate
-  - action: utter_ask_help
+
+- story: solicitar contato de professores
+  steps:
+    - checkpoint: check_ask_help
+    - user: |
+         preciso do email do professor  
+    - intent: request_email
+    - action: professor_name_form
+    - active_loop: professor_name_form
+    - slot_was_set:
+        - requested_slot: professor_name
+    - slot_was_set:
+        - professor_name: "Gustavo Guanabara"
+    - slot_was_set:
+        - requested_slot: null
+    - active_loop: null
+    - action: action_get_professor_contact
+    - action: utter_ask_help
+    - checkpoint: check_more_help
+
+- story: solicitar iformações horarios das aulas
+  steps:
+    - checkpoint: check_ask_help
+    - user: |
+        preciso dos horarios das aulas
+    - intent: request_classes
+    - action: utter_ask_classes_modality
+    - user: |
+        subsequente
+    - intent: modality
+      entities:
+      - courses_modality: subsequente
+    - slot_was_set:
+      - courses_modality: subsequente
+    - action: action_get_classes
+    - user: |
+        fabircação
+    - intent: courses
+      entities:
+      - courses_name: fabricação
+    - slot_was_set:
+      - courses_name: fabricação
+    - action: action_get_info_classe
+    - checkpoint: check_more_help
+
+- story: solicitar calendário acadêmico
+  steps:
+    - checkpoint: check_ask_help
+    - user: |
+        preciso do calendário academico
+    - intent: request_calendar
+    - action: action_get_calendar
+    - action: utter_ask_help
+    - checkpoint: check_more_help
+
+# - story: solicitar informações sobre os cursos
+#   steps:
+#     - checkpoint: check_ask_help
+#     - intent: request_courses
+#     - action: utter_ask_courses_modality
+#     - intent: modality
+#       entities:
+#       - courses_modality: integrado
+#     - slot_was_set:
+#       - courses_modality: integrado
+#     - action: action_get_courses
+#     - slot_was_set:
+#       - courses_modality_link: https://ifrs.edu.br/riogrande/cursos/cursos-tecnicos-integrados/
+#     - intent: courses
+#       entities:
+#       - courses_name: fabricação
+#     - slot_was_set:
+#       - courses_name: fabricação
+#     - action: action_get_info_course
+#     - checkpoint: check_more_help
+
+- story: solicitar matricula
+  steps:
+    - checkpoint: check_ask_help
+    - user: |
+        formas de ingressar no IFRS e fazer a matrícula
+    - intent: request_do_register
+    - action: action_inform_do_register
+    - action: utter_ask_help
+    - checkpoint: check_more_help
+
+- story: solicitar rematricula
+  steps:
+    - checkpoint: check_ask_help
+    - user: |
+        fazer a rematricula
+    - intent: request_redo_register
+    - action: utter_ask_redo_register
+    - user: |
+        [superior](courses_modality)
+    - intent: modality
+      entities:
+      - courses_modality: superior
+    - slot_was_set:
+      - courses_modality: superior
+    - action: action_inform_redo_register
+    - user: |
+        [tads](course_name)
+    - intent: courses
+      entities:
+      - courses_name: tads
+    - slot_was_set:
+      - courses_name: tads
+    - action: action_system_type
+    - action: utter_ask_help
+    - checkpoint: check_more_help
+    
+    - story: negando mais ajuda
+      steps:
+    - checkpoint: check_more_help
+    - user: |
+        não
+    - intent: deny
+    - action: utter_goodbye
+
+# - story: solicitar requerimentos
+#   steps:
+#     - checkpoint: check_ask_help
+#     - user: |
+#         solicitar requerimentos e  formularios
+#     - intent: request_requirements
+#     - action: requirement_form
+#     - active_loop: requirement_form
+#     - slot_was_set:
+#         - requested_slot: requirements
+#     - slot_was_set:
+#         - requirements: Reingresso
+#     - slot_was_set:
+#         - requested_slot: null
+#     - active_loop: null
+#     - action: action_get_requirements
+#     - action: utter_ask_help
+#     - checkpoint: check_more_help
+    
+- story: precisa de mais alguma ajuda? sim
+  steps:
+    - checkpoint: check_more_help
+    - user: |
+        gostaria de mais iformacoes
+    - action: utter_ask_more_help
+    - intent: affirm
+    - action: utter_req_to_ask
+    - user: |
+        sim
+    - action: utter_ask_help
+    - checkpoint: check_ask_help
+
+- story: precisa de mais alguma ajuda? the end
+  steps:
+    - checkpoint: check_more_help
+    - user: |
+        gostaria de mais ajuda
+    - action: utter_ask_more_help
+    - intent: deny
+    - action: action_goodbye_and_clear_slots
+    - user: |
+        não
+    # - checkpoint: check_ask_help
+
+
+- story: solicitar informações sobre forma de ingresso no IFRS
+  steps:
+    - checkpoint: check_ask_help
+    - user: |
+        gostaria de informações sobre a forma de ingresso no IFRS
+    - intent: request_do_register
+    - action: utter_ask_ingress_modality
+    - slot_was_set:
+      - requested_slot: ingress_modality
+    - slot_was_set:
+      - ingress_modality: Enem
+    - action: action_inform_do_register
+    - action: utter_ask_help
+    - checkpoint: check_more_help
