update: action_get_doc_register

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -284,3 +284,5 @@ nlu:
     - tutorial sistemas
     - como acessar sistemas academicos
     - tutorial de acesso a sistemas acadêmicos
+    - tutoriais dos sistemas
+    - tutoriais
