--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -50,29 +50,6 @@ nlu:
     - você é um humano?
     - estou falando com um robô?
     - estou falando com um humano?
-- intent: inform_name
-  examples: |
-    - meu nome é [fernando](PER)
-    - me chamo [thais](PER)
-    - sou a [Samanta](PER)
-    - eu sou a [Ivete](PER)
-    - [Fernando](PER) é meu nome
-    - me chamam de [João](PER)
-    - [fernando](PER)
-    - [Carlos](PER)
-    - [Juan](PER)
-    - [juliana](PER)
-    - [Vini](PER)
-    - [tatiele](PER)
-    - [Jussara](PER)
-    - [Miguel](PER)
-    - [Matheus](PER)
-    - [Sophia](PER)
-    - [Helena](PER)
-    - [Lara](PER)
-    - [Bernardo](PER)
-    - [Matheus Henrique](PER)
-
 - intent: request_doc_register
   examples: |
     - atestado
@@ -125,6 +102,7 @@ nlu:
     - [Patrícia dos Santos](PER)
     - [rodrigo](PER)
     - [Gustavo Guanabara](PER)
+    - [Fernando](PER)
 - intent: inform_professor_last_name
   examples: |
     - [Silva Oliveira](PER)
@@ -137,6 +115,7 @@ nlu:
     - é [Rodrigues](PER)
     - [marques](PER)
     - [peres](PER)
+    - [Barbosa](PER)
 - intent: request_email
   examples: |
     - email dos professores
@@ -227,7 +206,6 @@ nlu:
     - [tce](courses_name)
     - [formação pedagógica](courses_name)
     - [pedagógica não licenciados](courses_name)
-
 - intent: request_requirements
   examples: |
     - quero os requerimentos
