--- a/data/stories.yml
+++ b/data/stories.yml
@@ -5,15 +5,6 @@ stories:
   steps:
     - intent: greet
     - action: utter_greet
-    - action: name_form
-    - active_loop: name_form
-    - slot_was_set:
-        - requested_slot: name
-    - slot_was_set:
-        - name: Thais
-    - slot_was_set:
-        - requested_slot: null
-    - active_loop: null
     - action: utter_examples
     - action: utter_ask_help
     - checkpoint: check_ask_help
@@ -32,13 +23,15 @@ stories:
     - action: professor_name_form
     - active_loop: professor_name_form
     - slot_was_set:
-        - requested_slot: professor_name
-        - requested_slot: professor_last_name
+      - requested_slot: professor_name
+    # - slot_was_set:
+    #   - professor_name: Fernando
     - slot_was_set:
-        - professor_name: Gustavo
-        - professor_last_name: Guanabara
+      - requested_slot: professor_last_name
+    # - slot_was_set:
+    #   - professor_last_name: Barbosa
     - slot_was_set:
-        - requested_slot: null
+      - requested_slot: null
     - active_loop: null
     - action: action_get_professor_contact
     - checkpoint: check_more_help
@@ -150,3 +143,4 @@ stories:
     - action: utter_ask_more_help
     - intent: deny
     - action: action_goodbye_and_clear_slots
+
