--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ pipeline:
   - name: ResponseSelector
     epochs: 100
     constrain_similarities: true
-  - name: "SpacyEntityExtractor"
+  - name: SpacyEntityExtractor
     dimensions: ["PERSON"]
   - name: DIETClassifier
     epochs: 100
@@ -44,11 +44,11 @@ policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#   - name: RulePolicy
-#   - name: UnexpecTEDIntentPolicy
-#     max_history: 5
-#     epochs: 100
+  - name: MemoizationPolicy
+  - name: RulePolicy
+  - name: UnexpecTEDIntentPolicy
+    max_history: 5
+    epochs: 100
 #   - name: TEDPolicy
 #     max_history: 5
 #     epochs: 100
