--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,184 +1,177 @@
 version: "3.1"
 
 stories:
-- story: hello story
-  steps:
-    - intent: greet
-    - action: utter_greet
-    - action: name_form
-    - active_loop: name_form
-    - slot_was_set:
-        - requested_slot: name
-    - slot_was_set:
-        - name: Thais
-    - slot_was_set:
-        - requested_slot: null
-    - active_loop: null
-    - action: utter_examples
-    - action: utter_ask_help
-    - checkpoint: check_ask_help
+  - story: hello story
+    steps:
+      - intent: greet
+      - action: utter_greet
+      - action: name_form
+      - active_loop: name_form
+      - slot_was_set:
+          - requested_slot: name
+      - slot_was_set:
+          - name: Thais
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: utter_examples
+      - action: utter_ask_help
+      - checkpoint: check_ask_help
 
-- story: solicitar comprovante matricula
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_doc_register
-    - action: action_get_doc_register
-    - checkpoint: check_more_help
+  - story: solicitar comprovante matricula
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_doc_register
+      - action: action_get_doc_register
+      - checkpoint: check_more_help
 
-- story: solicitar contato de professores
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_email
-    - action: professor_name_form
-    - active_loop: professor_name_form
-    - slot_was_set:
-        - requested_slot: professor_name
-        - requested_slot: professor_last_name
-    - slot_was_set:
-        - professor_name: Gustavo
-        - professor_last_name: Guanabara
-    - slot_was_set:
-        - requested_slot: null
-    - active_loop: null
-    - action: action_get_professor_contact
-    - checkpoint: check_more_help
+  - story: solicitar contato de professores
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_email
+      - action: professor_name_form
+      - active_loop: professor_name_form
+      - slot_was_set:
+          - requested_slot: professor_name
+          - requested_slot: professor_last_name
+      - slot_was_set:
+          - professor_name: Gustavo
+          - professor_last_name: Guanabara
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_get_professor_contact
+      - checkpoint: check_more_help
 
-- story: solicitar iformações horarios das aulas
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_classes
-    - action: utter_ask_classes_modality
-    - intent: modality
-      entities:
-      - courses_modality: subsequente
-    - slot_was_set:
-      - courses_modality: subsequente
-    - action: action_get_classes
-    - intent: courses
-      entities:
-      - courses_name: fabricação
-    - slot_was_set:
-      - courses_name: fabricação
-    - action: action_get_info_classe
-    - checkpoint: check_more_help
+  - story: solicitar iformações horarios das aulas
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_classes
+      - action: utter_ask_classes_modality
+      - intent: modality
+        entities:
+          - courses_modality: subsequente
+      - slot_was_set:
+          - courses_modality: subsequente
+      - action: action_get_classes
+      - intent: courses
+        entities:
+          - courses_name: fabricação
+      - slot_was_set:
+          - courses_name: fabricação
+      - action: action_get_info_classe
+      - checkpoint: check_more_help
 
-- story: solicitar calendário acadêmico
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_calendar
-    - action: action_get_calendar
-    - checkpoint: check_more_help
+  - story: solicitar calendário acadêmico
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_calendar
+      - action: action_get_calendar
+      - checkpoint: check_more_help
 
-- story: solicitar informações sobre os cursos
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_courses
-    - action: utter_ask_courses_modality
-    - intent: modality
-      entities:
-      - courses_modality: integrado
-    - slot_was_set:
-      - courses_modality: integrado
-    - action: action_get_courses
-    - slot_was_set:
-      - courses_modality_link: https://ifrs.edu.br/riogrande/cursos/cursos-tecnicos-integrados/
-    - intent: courses
-      entities:
-      - courses_name: fabricação
-    - slot_was_set:
-      - courses_name: fabricação
-    - action: action_get_info_course
-    - checkpoint: check_more_help
+  - story: solicitar informações sobre os cursos
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_courses
+      - action: utter_ask_courses_modality
+      - intent: modality
+        entities:
+          - courses_modality: integrado
+      - slot_was_set:
+          - courses_modality: integrado
+      - action: action_get_courses
+      - slot_was_set:
+          - courses_modality_link: https://ifrs.edu.br/riogrande/cursos/cursos-tecnicos-integrados/
+      - intent: courses
+        entities:
+          - courses_name: fabricação
+      - slot_was_set:
+          - courses_name: fabricação
+      - action: action_get_info_course
+      - checkpoint: check_more_help
 
-- story: solicitar matricula
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_do_register
-    - action: action_inform_do_register
-    - checkpoint: check_more_help
+  - story: solicitar rematricula
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_redo_register
+      - action: utter_ask_redo_register
+      - intent: modality
+        entities:
+          - courses_modality: superior
+      - slot_was_set:
+          - courses_modality: superior
+      - action: action_inform_redo_register
+      - intent: courses
+        entities:
+          - courses_name: tads
+      - slot_was_set:
+          - courses_name: tads
+      - action: action_system_type
+      - checkpoint: check_more_help
+      # - slot_was_set:
+      #   - requested_slot: courses_name
+      # - slot_was_set:
+      #   - courses_name: tads
+      # - action: action_inform_do_register
+      # - action: action_system_type
+      # - checkpoint: check_more_help
 
-- story: solicitar rematricula
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_redo_register
-    - action: utter_ask_redo_register
-    - intent: modality
-      entities:
-      - courses_modality: superior
-    - slot_was_set:
-      - courses_modality: superior
-    - action: action_inform_redo_register
-    - intent: courses
-      entities:
-      - courses_name: tads
-    - slot_was_set:
-      - courses_name: tads
-    - action: action_system_type
-    - checkpoint: check_more_help
-    # - slot_was_set:
-    #   - requested_slot: courses_name
-    # - slot_was_set:
-    #   - courses_name: tads
-    # - action: action_inform_do_register
-    # - action: action_system_type
-    # - checkpoint: check_more_help
+  - story: solicitar requerimentos
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_requirements
+      - action: requirement_form
+      - active_loop: requirement_form
+      - slot_was_set:
+          - requested_slot: requirements
+      - slot_was_set:
+          - requirements: Reingresso
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_get_requirements
+      - checkpoint: check_more_help
 
-  
-- story: solicitar requerimentos
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_requirements
-    - action: requirement_form
-    - active_loop: requirement_form
-    - slot_was_set:
-        - requested_slot: requirements
-    - slot_was_set:
-        - requirements: Reingresso
-    - slot_was_set:
-        - requested_slot: null
-    - active_loop: null
-    - action: action_get_requirements
-    - checkpoint: check_more_help
+  - story: solicitar tutorial sistemas
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_system_tutorials
+      - action: system_form
+      - active_loop: system_form
+      - slot_was_set:
+          - requested_slot: system
+      - slot_was_set:
+          - system: AVA
+      - slot_was_set:
+          - requested_slot: null
+      - active_loop: null
+      - action: action_get_system_tutorials
+      - checkpoint: check_more_help
 
-- story: solicitar tutorial sistemas
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_system_tutorials
-    - action: system_form
-    - active_loop: system_form
-    - slot_was_set:
-        - requested_slot: system
-    - slot_was_set:
-        - system: AVA
-    - slot_was_set:
-        - requested_slot: null
-    - active_loop: null
-    - action: action_get_system_tutorials
-    - checkpoint: check_more_help
-    
-- story: precisa de mais alguma ajuda? sim
-  steps:
-    - checkpoint: check_more_help
-    - action: utter_ask_more_help
-    - intent: affirm
-    - action: utter_req_to_ask
-    - checkpoint: check_ask_help
+  - story: precisa de mais alguma ajuda? sim
+    steps:
+      - checkpoint: check_more_help
+      - action: utter_ask_more_help
+      - intent: affirm
+      - action: utter_req_to_ask
+      - checkpoint: check_ask_help
 
-- story: precisa de mais alguma ajuda? the end
-  steps:
-    - checkpoint: check_more_help
-    - action: utter_ask_more_help
-    - intent: deny
-    - action: action_goodbye_and_clear_slots
+  - story: precisa de mais alguma ajuda? the end
+    steps:
+      - checkpoint: check_more_help
+      - action: utter_ask_more_help
+      - intent: deny
+      - action: action_goodbye_and_clear_slots
 
-- story: solicitar informações sobre forma de ingresso no IFRS
-  steps:
-    - checkpoint: check_ask_help
-    - intent: request_do_register
-    - action: utter_ask_ingress_modality
-    - slot_was_set:
-      - requested_slot: ingress_modality
-    - slot_was_set:
-      - ingress_modality: Enem
-    - action: action_inform_do_register
-    - checkpoint: check_more_help
+  - story: solicitar informações sobre forma de ingresso no IFRS
+    steps:
+      - checkpoint: check_ask_help
+      - intent: request_do_register
+      - action: utter_ask_ingress_modality
+      - intent: ingress_modality
+        entities:
+          - ingress_modality: Enem
+      - slot_was_set:
+          - ingress_modality: Enem
+      - action: action_inform_do_register
+      - checkpoint: check_more_help
